--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
+    "gsap": "^3.12.0",
     "next": "^14.2.0",
+    "pdfjs-dist": "^5.4.530",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "@supabase/supabase-js": "^2.39.0",
-    "react-icons": "^5.0.0",
-    "gsap": "^3.12.0"
+    "react-icons": "^5.0.0"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
